# RustAegis

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: ROADMAP.md  ROADMAP_ASYNC_VM.md  WHITEBOX_CRYPTO_RESEARCH.md
examples/: 001_test.rs  01_arithmetic.rs  02_control_flow.rs  03_loops.rs  04_wasm.rs  05_whitebox_crypto.rs  06_native_calls.rs  07_native_call_macro.rs  08_async_vm.rs  09_spin_test.rs
examples/wasm_test/: Cargo.toml  README.md
examples/wasm_test/src/: lib.rs
src/: bytecode.rs  crypto.rs  engine.rs  error.rs  integrity.rs  lib.rs  native.rs  opcodes.rs  smc.rs  state.rs  string_obfuscation.rs
src/async_vm/: engine.rs  executor.rs  mod.rs  yielder.rs
src/handlers/: arithmetic.rs  control.rs  convert.rs  dispatch.rs  exec.rs  heap.rs  memory.rs  mod.rs  mutation.rs  native.rs  register.rs  special.rs  stack.rs  string.rs  vector.rs
src/whitebox/: cipher.rs  generator.rs  mod.rs  sbox.rs  tables.rs
tests/: anti_analysis.rs  build_config.rs  crypto.rs  division.rs  encrypted_execution.rs  fnv1a_hash.rs  free_list_allocator.rs  handler_mutation_integration.rs  heap_ops.rs  if_conditions.rs  integrity.rs  loop_edge_cases.rs  loop_stress.rs  loops.rs  match_ops.rs  multi_size.rs  mutation_tests.rs  native_functions.rs  native_registry.rs  polymorphic.rs  smc_tests.rs  stress_test.rs  string_obfuscation.rs  string_ops.rs  struct_ops.rs  substitution_test.rs  tuple_ops.rs  value_cryptor.rs  vector_ops.rs  vm_opcodes.rs  vm_protect.rs  vm_protect_encrypted.rs  vm_protect_integration.rs  whitebox_tests.rs
