[package]
name = "aegis_vm"
version = "0.2.3"
edition = "2021"
description = "Advanced Rust code virtualization and obfuscation framework"
license = "MIT"
repository = "https://github.com/onurkun/RustAegis"
keywords = ["obfuscation", "virtualization", "security", "vm", "protection"]
categories = ["cryptography", "development-tools"]
readme = "README.md"

[dependencies]
fastrand = "2.0"
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }
subtle = { version = "2.5", default-features = false }
aegis_vm_macro = "0.2.2"

[build-dependencies]
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
hex = "0.4"

[features]
default = ["std", "handler_mutation", "whitebox"]
std = []
vm_debug = []
handler_mutation = []
# White-box cryptography - REQUIRED for encrypted bytecode
# The proc-macro uses WBC for key derivation, runtime must match.
# This is now default because encrypted execution won't work without it.
whitebox = []
# Lightweight WBC variant (~50KB, T-boxes only) - alternative to full whitebox
whitebox_lite = []
# Experimental: Async VM engine for anti-analysis (state machine obfuscation)
# Adds ~100 lines, no external dependencies. Custom micro-executor.
async_vm = []

[profile.release]
strip = true
lto = "fat"       # En agresif link-time optimization
codegen-units = 1 # Paralel derlemeyi kapat, boyutu küçült
panic = "abort"   # Panic kodlarını at
opt-level = "z"   # Boyut odaklı optimizasyon ("s" yerine "z" daha agresif)
